# ecommerce-search

./: .gitignore  README.md  build.gradle  ner.md  search-101.md
notes/: ner.md  search-101.md
product-search-service/: .editorconfig  docker-compose.yml  gradle.properties  settings.gradle
product-search-service/src/main/java/com/codecafe/search/config/: FacetsConverter.java
product-search-service/src/main/java/com/codecafe/search/controller/: SearchController.java
product-search-service/src/main/resources/: application.yml  products.json
product-search-service/src/main/resources/mustache-template/: text-search-template.mustache
product-search-ui/: .eslintrc.json  .prettierrc  package-lock.json  package.json
product-search-ui/src/: App.css  App.js  App.jsx  App.tsx  index.js
product-search-ui/src/api/: SearchService.js
product-search-ui/src/components/common/emptyview/: index.jsx
product-search-ui/src/components/home/content/: index.js  index.jsx  styles.css
product-search-ui/src/components/home/searchbar/: index.jsx  styles.css
product-search-ui/src/components/home/searchbox/: index.js  styles.css
product-search-ui/src/components/home/sidebar/: Facet.js  FacetValue.js  index.js  styles.css
product-search-ui/src/components/home/sidepanel/: index.jsx
product-search-ui/src/contexts/: FilterCheckedContext.js  SearchResultsContext.js  SelectedFiltersContext.js
product-search-ui/src/pages/home/: index.js  index.jsx  styles.css
product-search-ui/src/theme/: CustomTheme.js  customTheme.ts
search-relevance-service/: pyproject.toml
(+4 files in other folders)
